--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "babel-loader": "^8.2.5",
+    "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
